// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Utils: addNewBtn renders the add button correctly 1`] = `
"<div>
    <div class=\\"card card__new card__new--event\\" title=\\"Ajouter un évènement\\"></div>
  </div>"
`;

exports[`Utils: addNewBtn renders the add button correctly 2`] = `
"<div>
    <div class=\\"card card__new card__new--group\\" title=\\"Ajouter un groupe\\"></div>
  </div>"
`;

exports[`Utils: pagination displays first page with next button 1`] = `"<div class=\\"pagination text-center\\"><ul><li class=\\"active\\" title=\\"page 1\\">1</li><li class=\\"pageBtn\\" title=\\"page 2\\">2</li><li class=\\"pageBtn\\" title=\\"page 3\\">3</li><li class=\\"pageBtn\\" title=\\"page suivante\\">&raquo;</li></ul></div>"`;

exports[`Utils: pagination displays second page with previous and next buttons 1`] = `"<div class=\\"pagination text-center\\"><ul><li class=\\"pageBtn\\" title=\\"page précédente\\">&laquo;</li><li class=\\"pageBtn\\" title=\\"page 1\\">1</li><li class=\\"active\\" title=\\"page 2\\">2</li><li class=\\"pageBtn\\" title=\\"page 3\\">3</li><li class=\\"pageBtn\\" title=\\"page suivante\\">&raquo;</li></ul></div>"`;

exports[`Utils: pagination displays third page with previous button 1`] = `"<div class=\\"pagination text-center\\"><ul><li class=\\"pageBtn\\" title=\\"page précédente\\">&laquo;</li><li class=\\"pageBtn\\" title=\\"page 1\\">1</li><li class=\\"pageBtn\\" title=\\"page 2\\">2</li><li class=\\"active\\" title=\\"page 3\\">3</li></ul></div>"`;
